# fullerene-generator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/embedder/: CMakeLists.txt  main.cpp
apps/generator/: CMakeLists.txt  main.cpp
include/: construct.h  expansions.h  fullerene.h
include/embeddings/: embedder.h  forces.h
include/expansions/: b_expansion.h  b_reduction.h  base_expansion.h  base_reduction.h  f_expansion.h  l0_signature_state.h  l_expansion.h  l_reduction.h  l_signature_state.h  signature_state.h
include/fullerene/: base_node.h  construct.h  directed_edge.h  dual_fullerene.h  expansions.h  fullerene.h
include/generator/: f_expansion_generator.h
include/generators/: base_generator.h  f_expansion_generator.h  id_registry.h  l_expansion_generator.h  main_generator.h
src/: base_node.cpp  construct.cpp  directed_edge.cpp  dual_fullerene.cpp  expansions.cpp  f_expansion.cpp  f_expansion_generator.cpp  fullerene.cpp  l0_signature_state.cpp  l_expansion.cpp  l_reduction.cpp  l_signature_state.cpp  main.cpp
src/embeddings/: CMakeLists.txt  embedder.cpp  forces.cpp
src/expansions/: CMakeLists.txt  b_expansion.cpp  b_reduction.cpp  base_expansion.cpp  base_reduction.cpp  f_expansion.cpp  l_expansion.cpp  l_reduction.cpp  l_signature_state.cpp  signature_state.cpp
src/fullerene/: CMakeLists.txt  base_node.cpp  directed_edge.cpp  dual_fullerene.cpp  fullerene.cpp
src/generators/: CMakeLists.txt  f_expansion_generator.cpp  l_expansion_generator.cpp  main_generator.cpp
tests/: CMakeLists.txt  test_embeddings.cpp  test_expansions.cpp  test_fullerene.cpp  test_l.cpp  test_l0.cpp  test_reductions.cpp
tests/common/: validation.h
